frontend/test/should_fail/index_exec_edge_isInFromIndexFromTo_candidate_mismatch.grg
#using "index_exec_model.gm"

sequence s(n:N, j:double)
{
	{ i:set<AEdge>=isInEdgesFromIndexFromTo(n, bari, 0, 42) }
}
